--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
-    "nodemon": "^3.0.1"
+    "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.1"
   }
 }
