--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
+    "node": "^21.1.0",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.1"
