--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "axios": "^1.6.0",
+    "express": "^4.18.2",
     "node": "^21.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
